Fixing wrong color bar for FireFox

--- a/cog/static/cog/css/cogstyle.css
+++ b/cog/static/cog/css/cogstyle.css
@@ -362,8 +362,8 @@ strong {
 }
 
 .box-comment .caption {
-	color: 417690;
-	background: B9E0E3;
+	color: #417690;
+	background: #B9E0E3;
 	border: 1px solid #417690;
 	margin-bottom: 3px;
 	font-weight: bold;
